# mgs_xp_linux

./: CMakeCache.txt  CMakeLists.txt
apps/dashboard/: CMakeLists.txt  main.c
apps/dashboard/apps/: app.c  app.h  app_scene1.c
apps/dashboard/gfx/canvas/: gfx_canvas_config.h
apps/dashboard/gfx/legato/: legato_config.h
apps/dclass_audio/: CMakeLists.txt
apps/dclass_audio/apps/: app_dclassIntf.c  app_dclassIntf.h  app_macros.h  app_screenMain.c
apps/dclass_audio/gfx/legato/: legato_config.h
apps/evcharger/: CMakeLists.txt
apps/evcharger/apps/: app_ChargeFullScreen.c  app_ChargeGraphScreen.c  app_ChargeMetricScreen.c  app_PayScreen.c  app_PlugScreen.c  app_SplashScreen.c  app_screen.h
apps/evcharger/gfx/legato/: legato_config.h
apps/evcharger/gfx/legato/widget/linegraph/: legato_widget_line_graph_skin_classic.c
apps/kiosk/: CMakeLists.txt
apps/kiosk/apps/: app_CompleteScreen.c  app_ConfirmScreen.c  app_DetailsScreen.c  app_PaymentScreen.c  app_WelcomeScreen.c  app_audioIntf.c  app_audioIntf.h  app_dataIntf.c  app_dataIntf.h  app_gui.c  app_gui.h  app_screen.h
apps/kiosk/gfx/legato/: legato_config.h
apps/mixer_basic/: CMakeLists.txt  main.c
apps/mixer_basic/apps/: app_ScreenMain.c  app_ScreenMain.h  app_audioIntf.c  app_audioIntf.h  app_macros.h
apps/mixer_basic/gfx/legato/: legato_config.h
apps/pm5/: CMakeLists.txt
apps/pm5/apps/: app_ScreenHome.c  app_ScreenLanding.c  app_gui.h
apps/pm5/cpp/: print.cpp  print.h  printInterface.cpp  printInterface.h
apps/pm5/gfx/legato/: legato_config.h
apps/quickstart/: CMakeLists.txt
apps/quickstart/gfx/legato/: legato_config.h
apps/quickstart_canvas/: CMakeLists.txt
apps/quickstart_canvas/apps/: app.c  app.h
apps/quickstart_canvas/gfx/canvas/: gfx_canvas_config.h
apps/quickstart_canvas/gfx/legato/: legato_config.h
apps/smartHome/: CMakeLists.txt
apps/smartHome/apps/: app.c  app.h  appScreen.c
apps/smartHome/gfx/legato/: legato_config.h
apps/smartHomeSA_Stream/: CMakeLists.txt
apps/smartHomeSA_Stream/apps/: app.c  appScreen.c
apps/smartHomeSA_Stream/gfx/legato/: legato_config.h
apps/smartHomeStandAlone/: CMakeLists.txt  Makefile  cmake_install.cmake  mgs_smartHomeSA
apps/smartHomeStandAlone/apps/: app.c  app.h  appScreen.c
cmake/: AstyleFormatSource.cmake
system/: system_init.c  system_init.h
system/gfx/canvas/: gfx_canvas.c  gfx_canvas.h  gfx_canvas_api.c  gfx_canvas_api.h
system/gfx/driver/: gfx_driver.h
system/linux/: sim_time.c  sim_time.h  toolchain_specifics.h
system/linux/display/drm/: drm_backend.c  drm_backend.h  drm_crtc.c  drm_device.c  drm_device.h  drm_framebuffer.c  drm_plane.c  drm_screen.c  plane.c  plane.h
system/linux/display/fbdev/: fbdev_backend.c  fbdev_backend.h
system/linux/display/sdl2/: gfx_sdl2.c  gfx_sdl2.h
system/linux/input/: libinput_backend.c  libinput_backend.h
